# Machine-Learning

./: .gitignore  README.md
.github/workflows/: topo-rust-ci.yml
color_inference/: ;w  color_dataset.m  image_pipeline.py  infer_color.py  model.py  sigmoid.py  train.py
topo-preference/: api_client.py  clientbackbone.py  clients.py  climate_aggregate.py  consensus.py  diagnostic.py  display_state.py  noaa.py  noaa_pull.py  pca_for_sql.py  prompt.txt  pull.py  requirements.txt  soil.py  sql_to_csv.py
topo-preference/clients/: Cargo.toml  api_client.py  attom_pull.py  noaa_pull.py
topo-preference/clients/src/: crime.rs  lib.rs  main.rs  weather.rs
topo-preference/csv/: noaa.csv
