[package]
name = "clients"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-cron-scheduler  = "0.14.0"
dotenvy     = "0.15.7"
reqwest     = { version = "0.11", features = ["json", "rustls-tls"] }
tokio       = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
chrono      = { version = "0.4", features = ["serde"] }
rusqlite    = { version = "0.29.0", features = ["bundled"] }
csv         = "1.1"
glob        = "0.3"
regex       = "1"
geo         = "0.24"
geojson     = "0.23"
phf         = { version = "0.10", features = ["macros"] }
anyhow      = "1.0"
async-trait = "0.1"
futures     = "0.3"
urlencoding = "2.1"
